[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/chapter_map_controller.gd" id="1"]

[node name="ChapterMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.04, 0.06, 1.0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ChapterTitleLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Chapter 1: Forgotten Library"
horizontal_alignment = 1

[node name="ChapterDescLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = "Description..."
horizontal_alignment = 1

[node name="ProgressRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ChapterProgressBar" type="ProgressBar" parent="MarginContainer/VBox/ProgressRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 16)
max_value = 6.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBox/ProgressRow"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 6"

[node name="Sep" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="NodeList" type="VBoxContainer" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Sep2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="RetreatBtn" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Retreat (lose unbound pages)"
